--- a/src/common/uni.css
+++ b/src/common/uni.css
@@ -1452,3 +1452,5 @@ input{
 .padding1{
   padding: 0.1px 0;
 }
+.el-slider__runway .el-slider__button-wrapper{z-index: 100 ;}
+.el-slider__runway .el-slider__bar{    background-color: #409dE5;}
