--- a/src/common/uni.css
+++ b/src/common/uni.css
@@ -7,7 +7,7 @@
 
 /*通用 */
 div{
-	font-size:28upx; 
+	font-size:28upx;
 	line-height:1.8;
 }
 progress, checkbox-group{
@@ -51,7 +51,7 @@ form {
 
 /* page */
 .uni-page-head{
-	padding:35upx; 
+	padding:35upx;
 	text-align: center;
 }
 .uni-page-head-title {
@@ -87,7 +87,7 @@ form {
 	font-size:28upx;
 }
 .uni-title span {
-	font-size:24upx; 
+	font-size:24upx;
 	color:#888;
 }
 
@@ -167,14 +167,14 @@ radio-group label, checkbox-group label{
 	padding-right:20upx;
 }
 .uni-form-item .with-fun{
-	display:flex; 
-	flex-wrap:nowrap; 
+	display:flex;
+	flex-wrap:nowrap;
 	background:#FFFFFF;
 }
 .uni-form-item .with-fun .uni-icon{
-	width:40px; 
-	height:80upx; 
-	line-height:80upx; 
+	width:40px;
+	height:80upx;
+	line-height:80upx;
 	flex-shrink:0;
 }
 
@@ -1042,21 +1042,21 @@ radio-group label, checkbox-group label{
 	.uni-timeline-item .uni-timeline-item-content {
 		padding-left:.20rem;
 	}
-	
+
 	.uni-timeline-last-item .bottom-border::after{
 		display: none;
 	}
-	
+
 	.uni-timeline-item-content .datetime{
 		color: #CCCCCC;
 	}
-	
+
 	/* 自定义节点颜色 */
 	.uni-timeline-last-item .uni-timeline-item-divider{
 		background-color: #1AAD19;
 	}
-  
-  
+
+
 /* uni-icon */
 
 .uni-icon {
@@ -1454,3 +1454,24 @@ input{
 }
 .el-slider__runway .el-slider__button-wrapper{z-index: 100 ;}
 .el-slider__runway .el-slider__bar{    background-color: #409dE5;}
+
+.vuePickera .area_roll_mask{
+  -webkit-mask:none!important;
+}
+.vuePickera .area_roll{
+  background-color: white!important;
+  -webkit-mask:none!important;
+}
+.vuePickera .area_btn_box{
+  background-color: white!important;
+}
+.vuePickera .area_grid{
+  border-bottom: 1px solid #eee!important;
+  border-top: 1px solid #eee!important;
+}
+.vuePickera .area_ctrl{
+  color:gray!important;
+}
+.vuePickera .larea_cancel{
+  color:gray!important;
+}
