--- a/src/common/black.scss
+++ b/src/common/black.scss
@@ -7,6 +7,12 @@ $blue1:#409de5;//主蓝色
 div#app.at-night{
   min-height: 100vh;
   background-color: $black1;
+  .van-picker-column__item--selected{
+  color: #fff;
+  } 
+  /* .self-mask{
+    background-color: rgba(255,255,255,0.3);
+  } */
   div.wrap{
     background-color: $black1;
     color: #fff;
@@ -14,7 +20,7 @@ div#app.at-night{
   div.root-el{
     background-color: $black2;
     border-color: $black1;
-
+    color: #fff;
   }
   .textc1{
     color: #fff;
@@ -25,12 +31,14 @@ div#app.at-night{
   .black1{
     background-color: $black1;
     background: $black1;
-    box-shadow:none
+    box-shadow:none;
+    border-color: transparent;
+
   }
   .black2{
     background-color: $black2;
     background: $black2;
-    border-color: $black1;
+    border-color: transparent;
     box-shadow:none
 
   }
