--- a/src/common/black.scss
+++ b/src/common/black.scss
@@ -9,7 +9,16 @@ $blue1:#409de5;//主蓝色
 }
 div#app.at-night{
   min-height: 100vh;
+  background-color: $black2;
+  .vuePickera .area_roll{
+  background-color: $black2;
+}
+.vuePickera .area_btn_box{
   background-color: $black1;
+}
+.vuePickera .area_ctrl{
+  color:#fff;
+}
   .van-picker-column__item--selected{
   color: #fff;
   } 
@@ -70,4 +79,26 @@ div#app.at-night{
     background: $blue1;
     border-color: $blue1
   }
+}
+div#app{
+  .vuePickera .area_roll_mask{
+  -webkit-mask:none;
+}
+.vuePickera .area_roll{
+  background-color: white;
+  -webkit-mask:none;
+}
+.vuePickera .area_btn_box{
+  background-color: white;
+}
+.vuePickera .area_grid{
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+}
+.vuePickera .area_ctrl{
+  color:gray;
+}
+.vuePickera .larea_cancel{
+  color:gray;
+}
 }
