--- a/src/common/uni.css
+++ b/src/common/uni.css
@@ -73,6 +73,12 @@ form {
 * {
   box-sizing: border-box;
 }
+*:not(input) { 
+    user-select: none; 
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    touch-callout: none;
+}
 input{
   border: 0;
 	-webkit-appearance:none;
