--- a/src/common/variable.scss
+++ b/src/common/variable.scss
@@ -4,3 +4,4 @@ $black3:#2c2c33;//底部一级导航分割线
 $gray1:#828597;//icon 普通文字，用户名，正文内容，时间
 $green1:#1bd091;//行情下跌，亏损时
 $blue1:#409de5;//主蓝色
+$yellow1:#e6aa12;//主蓝色
