加黑框颜色

--- a/src/common/black.scss
+++ b/src/common/black.scss
@@ -13,6 +13,9 @@ div#app.at-night{
 .vuePickera .area_btn_box{
   background-color: $black1;
 }
+.blackBorder{
+  border-color: $black1;
+}
 .vuePickera .area_ctrl{
   color:#fff;
 }
