--- a/src/common/uni.css
+++ b/src/common/uni.css
@@ -97,6 +97,11 @@ input{
 }
 .el-slider__runway .el-slider__button-wrapper{z-index: 8 ;}
 .el-slider__runway .el-slider__bar{    background-color: #409dE5;}
+.el-slider__runway .el-slider__button-wrapper{
+  width: 50px;
+  height: 50px;
+  top: -22px;
+}
 div.wrap{
   width: 100%;
 }
