--- a/src/common/variable.scss
+++ b/src/common/variable.scss
@@ -2,7 +2,7 @@ $black1:#0f131f;//页面背景，描边，分割线
 $black2:#181c28;//每个内容区域的背景
 $black3:#2c2c33;//底部一级导航分割线
 $gray1:#828597;//icon 普通文字，用户名，正文内容，时间
-$green1:#1bd091;//行情下跌，亏损时
+$green1:#3aba8f;//行情下跌，亏损时
 $blue1:#409de5;//主蓝色
 $yellow1:#e6aa12;//主黄色
 $red1:#ec605e;//主红色
