--- a/src/common/black.scss
+++ b/src/common/black.scss
@@ -58,7 +58,7 @@ div#app.at-night{
     color: #fff;
   }
   .textc2{
-    color: $gray1;
+    color: $blackTxt1;
   }
   .black1{
     background-color: $black1;
